--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
-  <title>React App</title>
+  <title>Brian Burns</title>
 </head>
 
 <body>
