--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script type="text/javascript" src="../src/js/jquery.1.11.1.js"> </script> 
+    <script type="text/javascript" src="../src/js/bootstrap.js"> </script> 
+    <script type="text/javascript" src="../src/js/SmoothScroll.js"> </script> 
+    <script type="text/javascript" src="../src/js/nivo-lightbox.js"> </script> 
+    <script type="text/javascript" src="../src/js/jquery.isotope.js"> </script> 
+    <script type="text/javascript" src="../src/js/jqBootstrapValidation.js"> </script> 
+    <script type="text/javascript" src="../src/js/contact_me.js"> </script> 
+    <script type="text/javascript" src="../src/js/main.js"> </script>
 </body>
 
 </html>
