--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
   <title>Brian Burns</title>
 </head>
 
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
